# barricade-service

./: .env.example  .gitignore  CONTEXT.MD  README.md  barricade_colored_logging.py  barricade_config.json  bin.setup  main.py  pyproject.toml  run-barricade.sh
anpr-service/: utility.py
anpr_service/: ANPR.py  README.md  __init__.py  anpr_service.py  logging_config.py  pyproject.toml  server.py  utility.py
anpr_service/examples/: camera_frame_example.py  example_usage.py
api_agent/: CONTEXT.MD  README.md  __init__.py  app.py  config.py  logging_config.py  main.py  pyproject.toml
api_agent/core/: __init__.py  connection.py  events.py
api_agent/routes/: __init__.py  config.py  health.py  proxy.py  rfid_scan.py  root.py  ws.py
api_agent/services/: __init__.py  backend_client.py  backend_health.py  session.py  verification.py
dashboard_service/: CONTEXT.MD  README.md  index.html  package-lock.json  package.json  vite.config.js
dashboard_service/src/: App.css  App.jsx  AppAgent.jsx  ColorModeContext.jsx  constants.js  index.css  main.jsx  theme.js
dashboard_service/src/admin/: AdminLayout.jsx  AlertsPage.jsx  ConfigurationPage.jsx  DriversPage.jsx  OrdersPage.jsx  TrucksPage.jsx
dashboard_service/src/components/: CameraFeed.jsx  DriverCard.jsx  GateControl.jsx  Header.jsx  LoginPage.jsx  ManualPlateEntryDialog.jsx  SessionLog.jsx  StatusBadge.jsx  index.js
dashboard_service/src/hooks/: useAuth.js  useBackendApi.js  useBackendHealth.js  useVerificationState.js  useWebSocket.js
dashboard_service/src/utils/: jwtExpiry.js  logger.js
gate_control_script/: gate_control_script.ino
rfid_service/: README.md  __init__.py  app.py  config.py  logging_config.py  main.py  mock_data.py  push.py  pyproject.toml  serial_reader.py  service.py
