[project]
name = "rfid-service"
version = "0.1.0"
description = "Mock RFID service for barricade local development"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
rfid-service = "rfid_service.main:main"

[tool.setuptools]
packages = ["rfid_service"]
package-dir = { "rfid_service" = "." }
