[project]
name = "rfid-service"
version = "0.3.0"
description = "RFID service for barricade (Arduino serial + mock) — pushes tag ids to the API Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pyserial>=3.5",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
rfid-service = "rfid_service.main:main"

[tool.setuptools]
packages = ["rfid_service"]
package-dir = { "rfid_service" = "." }
